--- a/lib/services/l10n/app_ar.arb
+++ b/lib/services/l10n/app_ar.arb
@@ -318,5 +318,33 @@
   "no_result_found": "لم يتم العثور على نتائج",
   "product_stock_is_insufficient": "مخزون المنتج غير كافٍ",
   "ship_to_a_different_location": "توصيل إلى موقع مختلف؟",
-  "payment": "الدفع"
+  "payment": "الدفع",
+  "retry": "إعادة المحاولة",
+  "apple_original_chair_collection": "مجموعة كراسي أبل الأصلية",
+  "order_details": "تفاصيل الطلب",
+  "view": "عرض",
+  "order_has_been_cancelled": "تم إلغاء الطلب",
+  "order_has_been_delivered": "تم تسليم الطلب",
+  "shipping_details": "تفاصيل الشحن",
+  "street_address": "عنوان الشارع",
+  "show_all": "عرض الكل",
+  "no_information_available": "لا توجد معلومات متاحة",
+  "no_sub_category_available": "لا توجد فئة فرعية متاحة",
+  "child_category": "الفئة الفرعية",
+  "could_not_load_any_message": "تعذر تحميل أي رسالة",
+  "no_more_message_found": "لم يتم العثور على مزيد من الرسائل",
+  "status": "الحالة",
+  "my_wishlist": "قائمة الرغبات",
+  "sub_order_id": "معرّف الطلب الفرعي",
+  "transaction_id": "معرّف المعاملة",
+  "payment_getaway": "بوابة الدفع",
+  "payment_status": "حالة الدفع",
+  "select_city": "حدد المدينة",
+  "your_order_has_been_placed": "تم تقديم الطلب، ولكن هناك مشكلة مع دفعك. معرّف طلبك هو ",
+  "account_delete_successful": "حسابك تم حذفه بنجاح",
+  "complete_Your_Purchase": "اكمل شراءك",
+  "please_provide_payment_document": "يرجى تقديم وثيقة الدفع",
+  "server_connection_slow": "الاتصال بالسيرفر يسرى. يرجى المحاولة مرة أخرى في وقت لاحق",
+  "skip": "تخطي",
+  "unit": "وحدة"
 }
