--- a/lib/services/l10n/app_en.arb
+++ b/lib/services/l10n/app_en.arb
@@ -318,5 +318,33 @@
   "no_result_found": "No result found",
   "product_stock_is_insufficient": "Product stock is insufficient",
   "ship_to_a_different_location": "Ship to a different location?",
-  "payment": "Payment"
+  "payment": "Payment",
+  "retry": "Retry",
+  "apple_original_chair_collection": "Apple Original Chair Collection",
+  "order_details": "Order details",
+  "view": "View",
+  "order_has_been_cancelled": "Order has been cancelled",
+  "order_has_been_delivered": "Order has been delivered",
+  "shipping_details": "Shipping details",
+  "street_address": "Street address",
+  "show_all": "Show all",
+  "no_information_available": "No information available",
+  "no_sub_category_available": "No sub category available",
+  "child_category": "Child category",
+  "could_not_load_any_message": "Could not load any message",
+  "no_more_message_found": "No more message found",
+  "status": "Status",
+  "my_wishlist": "My wishlist",
+  "sub_order_id":"Sub-order Id",
+  "transaction_id": "Transaction Id",
+  "payment_getaway": "Payment Getaway",
+  "payment_status": "Payment Status",
+  "select_city": "Select city",
+  "your_order_has_been_placed": "Your order has been placed, but there was an issue with your payment. Your order ID is ",
+  "account_delete_successful": "Account delete successful",
+  "complete_Your_Purchase": "Complete Your Purchase",
+  "please_provide_payment_document": "Please provide payment document",
+  "server_connection_slow": "Server connection slow",
+  "skip": "Skip",
+  "unit": "Unit"
 }
