--- a/lib/services/l10n/app_ar.arb
+++ b/lib/services/l10n/app_ar.arb
@@ -1,7 +1,7 @@
 {
 "cancel": "إلغاء",
 "are_you_sure": "هل أنت متأكد؟",
-"safeCart": "SafeCart",
+"safeCart": "HubSpareParts",
 "please_select_a_country": "الرجاء اختيار دولة",
 "please_select_a_state": "الرجاء اختيار ولاية",
 "profile_info_successfully_updated": "تم تحديث معلومات الملف الشخصي بنجاح",
@@ -288,7 +288,7 @@
   "please_select_an_attribute_set": "يرجى تحديد مجموعة مواصفات",
   "items_total": "إجمالي العناصر",
   "you_have_agree_to_our_Terms_Conditions": "يجب أن توافق على الشروط والأحكام الخاصة بنا",
-  "safeCart_Products": "منتجات SafeCart",
+  "safeCart_Products": "منتجات HubSpareParts",
   "payment_confirm_success": "تم تأكيد الدفع بنجاح",
   "payment_confirm_failed": "فشل تأكيد الدفع",
   "please_enter_all_the_information": "يرجى إدخال جميع المعلومات",
