--- a/lib/services/l10n/app_ar.arb
+++ b/lib/services/l10n/app_ar.arb
@@ -276,6 +276,10 @@
   "color": "اللون",
   "size": "المقاس",
   "brands": "العلامات التجارية",
+  "current_rating": "التقييم الحالي",
+  "voltage_rating": "تقييم الطاقة",
+  "control_voltage": "طاقة التحكم",
+  "power_rating": "تقييم الطاقة",
   "filter_Price": "تصفية حسب السعر",
   "average_Rating": "التقييم المتوسط",
   "reset_Filter": "إعادة تعيين الفلتر",
