--- a/lib/services/l10n/app_en.arb
+++ b/lib/services/l10n/app_en.arb
@@ -276,6 +276,10 @@
   "color": "Color",
   "size": "Size",
   "brands": "Brands",
+  "current_rating": "Current Ratings",
+  "voltage_rating": "Voltage Rating",
+  "control_voltage": "Control Voltage",
+  "power_rating": "Power Rating",
   "filter_Price": "Filter Price",
   "average_Rating": "Average Rating",
   "reset_Filter": "Reset Filter",
