--- a/lib/services/l10n/app_ar.arb
+++ b/lib/services/l10n/app_ar.arb
@@ -30,6 +30,7 @@
 "search_your_need_here": "ابحث عن احتياجاتك هنا",
 "press_again_to_exit": "اضغط مرة أخرى للخروج",
 "find_Your_Style": "ابحث عن أسلوبك",
+"find_Your_Brand": "ابحث عن ماركة",
 "featured_Item": "العناصر المميزة",
 "hot_Items": "العناصر الشائعة",
 "you_ll_have_to_Sign_in_Sign_up_to_edit_or_see_your_profile_info": "يجب عليك تسجيل الدخول/التسجيل لتعديل أو رؤية معلومات ملفك الشخصي.",
