--- a/lib/services/l10n/app_en.arb
+++ b/lib/services/l10n/app_en.arb
@@ -30,6 +30,7 @@
   "search_your_need_here": "Search your need here",
   "press_again_to_exit": "Press again to exit",
   "find_Your_Style": "Find Your Style",
+  "find_Your_Brand": "Find Your Brand",
   "featured_Item": "Featured Item",
   "hot_Items": "Hot Items",
   "you_ll_have_to_Sign_in_Sign_up_to_edit_or_see_your_profile_info": "You'll have to Sign-in/Sign-up to edit or see your profile info.",
