--- a/lib/services/l10n/app_ar.arb
+++ b/lib/services/l10n/app_ar.arb
@@ -29,7 +29,7 @@
 "profile": "الملف الشخصي",
 "search_your_need_here": "ابحث عن احتياجاتك هنا",
 "press_again_to_exit": "اضغط مرة أخرى للخروج",
-"find_Your_Style": "ابحث عن أسلوبك",
+"find_Your_Style": "ابحث عن فئتك",
 "find_Your_Brand": "ابحث عن ماركة",
 "featured_Item": "العناصر المميزة",
 "hot_Items": "العناصر الشائعة",
