--- a/lib/services/l10n/app_en.arb
+++ b/lib/services/l10n/app_en.arb
@@ -29,7 +29,7 @@
   "profile": "profile",
   "search_your_need_here": "Search your need here",
   "press_again_to_exit": "Press again to exit",
-  "find_Your_Style": "Find Your Style",
+  "find_Your_Style": "Find Your Category",
   "find_Your_Brand": "Find Your Brand",
   "featured_Item": "Featured Item",
   "hot_Items": "Hot Items",
