1- fix some issuse

--- a/lib/services/l10n/app_ar.arb
+++ b/lib/services/l10n/app_ar.arb
@@ -354,5 +354,6 @@
   "unit": "وحدة",
   "language": "اللغة",
   "arabic": "العربية",
-  "english": "الانجليزية"
+  "english": "الانجليزية",
+  "my_points": "نقاطي :"
 }
