--- a/lib/services/l10n/app_en.arb
+++ b/lib/services/l10n/app_en.arb
@@ -354,5 +354,6 @@
   "unit": "Unit",
   "language": "language",
   "arabic": "arabic",
-  "english": "English"
+  "english": "English",
+  "my_points": "My Points : "
 }
